# myo_kuka

./: .gitignore  CMakeLists.txt  README.md  README_new.md  myo_kuka_controllers.xml  package.xml  teleoperation_controllers.xml
config/: asus_calibration.yaml  hardware_interfaces.yaml  vito_controllers.yaml
include/: distance_between_lines.h  interpolationmb.h  multi_task_priority_inverse_kinematics.h  multi_task_priority_inverse_kinematics.h~  potential_field_control_kinematic_reverse_effort.h  teleoperation_controller.h  teleoperation_controller_mt.h  teleoperation_controller_mt_effort.h
include/teleoperation_controllers/: slave_test_controller.h  test_control.h
launch/: desperate_demo_scene_filter.launch  desperate_robot.launch  desperate_robot.launch~  display.launch  myo_kuka_visualization.launch  remap_hand_positions.launch  run_vito.launch  run_vito_II.launch  rviz_config.rviz
robot/: vito.urdf.xacro
src/: multi_task_priority_inverse_kinematics.cpp  potential_field_control_kinematic_reverse_effort.cpp  slave_test_controller.cpp  teleoperation_controller.cpp  teleoperation_controller_mt.cpp  teleoperation_controller_mt_effort.cpp  test_control.cpp
worlds/: simple_environment.world
